活动编辑和导入功能

--- a/DOVE.Application/DOVE.Application.Web/Areas/BaseManage/Views/User/Index.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/BaseManage/Views/User/Index.cshtml
@@ -32,6 +32,7 @@
                 { label: '账户', name: 'Account', index: 'Account', width: 100, align: 'left' },
                 { label: '姓名', name: 'RealName', index: 'RealName', width: 100, align: 'left' },
                 { label: '昵称', name: 'NickName', index: 'NickName', width: 100, align: 'left' },
+                { label: '微信', name: 'WeChat', index: 'WeChat', width: 100, align: 'left' },
                 {
                     label: '性别', name: 'Gender', index: 'Gender', width: 45, align: 'center',
                     formatter: function (cellvalue, options, rowObject) {
