--- a/DOVE.Application/DOVE.Application.Web/Areas/PublicInfoManage/Views/ResourceFile/UploadifyActivityForm.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/PublicInfoManage/Views/ResourceFile/UploadifyActivityForm.cshtml
@@ -7,6 +7,7 @@
 <script src="~/Content/scripts/plugins/plupload/plupload.full.min.js"></script>
 <script>
     var folderId = request('folderId');
+    var methodname = request('method');
     $(function () {
         uploadify();
     })
@@ -14,7 +15,7 @@
     function uploadify() {
         var uploader = new plupload.Uploader({ //实例化一个plupload上传对象
             browse_button: 'uploadify',
-            url: '/PublicInfoManage/ResourceFile/ActivitiesUpload?folderId=' + folderId,
+            url: '/PublicInfoManage/ResourceFile/' + methodname + '?folderId=' + folderId,
             flash_swf_url: '~/Content/scripts/plugins/plupload/Moxie.swf',
             silverlight_xap_url: '~/Content/scripts/plugins/plupload/Moxie.xap',
             filters: {
@@ -34,6 +35,7 @@
                 var html = '<div id="' + files[i].id + '" class="uploadify-queue-item"><p class="uploadify-progress"></p><div style="float:left;width:50px;margin-right:2px;"><img src="/Content/images/filetype/' + file_name.split('.')[1] + '.png" style="width:40px;height:40px;" /></div><span class="fileName">' + file_name + '</span><span class="data"></span><div class="uploadify-progress"><div class="uploadify-progress-bar"></div></div></div>';
                 $(html).appendTo('.uploadify-queue');
                 uploader.start(); //开始上传
+                Loading(true);
             }
         });
 
@@ -44,12 +46,22 @@
 
         //绑定队列中的某一个文件上传完成后触发
         uploader.bind('FileUploaded', function (uploader, file, responseObject) {
-            $("#" + file.id).find('.uploadify-progress').remove();
-            $("#" + file.id).find('.data').html(' 恭喜您，上传成功！');
-            $("#" + file.id).prepend('<a class="succeed" title="成功"><i class="fa fa-check-circle"></i></a>');
-            Loading(false);
-            $.currentIframe().$("#gridTable").trigger("reloadGrid");
-            Loading(false);
+            var result = JSON.parse(responseObject.response)
+            var info = "";
+            if (result.errorcode == 3) {
+                info = result.message;
+                $("#" + file.id).removeClass('uploadify-error');
+                $("#" + file.id).find('.uploadify-progress').remove();
+                $("#" + file.id).find('.data').html(info);
+                $("#" + file.id).prepend('<span class="error" title="失败"><i class="fa fa-exclamation-circle"></i></span>');
+            } else {
+                $("#" + file.id).find('.uploadify-progress').remove();
+                $("#" + file.id).find('.data').html(' 恭喜您，上传成功！');
+                $("#" + file.id).prepend('<a class="succeed" title="成功"><i class="fa fa-check-circle"></i></a>');
+                Loading(false);
+                $.currentIframe().$("#gridTable").trigger("reloadGrid");
+                Loading(false);
+            }
         });
 
         //绑定队列中的所有文件上传完成后触发
@@ -63,6 +75,7 @@
             $("#" + errObject.file.id).find('.uploadify-progress').remove();
             $("#" + errObject.file.id).find('.data').html(' 上传失败！');
             $("#" + errObject.file.id).prepend('<span class="error" title="失败"><i class="fa fa-exclamation-circle"></i></span>');
+            Loading(false);
         });
         ////上传按钮
         //$('#upload-btn').click(function () {
