--- a/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
@@ -40,7 +40,7 @@
                 { label: '活动结束时间', name: 'activityendtime', index: 'activityendtime', width: 150, align: 'left', sortable: true },
                 { label: '报名开始时间', name: 'signupstarttime', index: 'signupstarttime', width: 150, align: 'left', sortable: true },
                 { label: '报名截止时间', name: 'signupendtime', index: 'signupendtime', width: 150, align: 'left', sortable: true },
-                { label: '发起人ID', name: 'initiator', index: 'initiator', width: 100, align: 'left', sortable: true },
+                { label: '发起人', name: 'initiatorname', index: 'initiatorname', width: 100, align: 'left', sortable: true },
                 { label: '备注', name: 'description', index: 'description', width: 100, align: 'left', sortable: true }
             ],
             viewrecords: true,
@@ -95,8 +95,8 @@
             id: 'Form',
             title: '添加活动信息表',
             url: '/DoveManage/T_Activity/T_ActivityForm',
-            width: '700px',
-            height: '500px',
+            width: "900px",
+            height: "550px",
             callBack: function (iframeId) {
                 top.frames[iframeId].AcceptClick();
             }
@@ -104,14 +104,14 @@
     }
     //编辑
     function btn_edit() {
-        var keyValue = jqGridRowValue('#gridTable', 'Activityid');
+        var keyValue = $("#gridTable").jqGridRowValue("activityid");
         if (checkedRow(keyValue)) {
             dialogOpen({
                 id: 'Form',
                 title: '编辑活动信息表',
                 url: '/DoveManage/T_Activity/T_ActivityForm?keyValue=' + keyValue,
-                width: 'px',
-                height: 'px',
+                width: "900px",
+                height: "550px",
                 callBack: function (iframeId) {
                     top.frames[iframeId].AcceptClick();
                 }
@@ -120,7 +120,7 @@
     }
     //删除
     function btn_delete() {
-        var keyValue = jqGridRowValue('#gridTable', 'Activityid');
+        var keyValue = $("#gridTable").jqGridRowValue("activityid");
         if (keyValue) {
             $.RemoveForm({
                 url: '../../DoveManage/T_Activity/RemoveForm',
@@ -164,16 +164,29 @@
             }, btn: ['导出Excel', '关闭']
         });
     }
+    //小立报名导入
+    function btn_import_xiaoli() {
+        dialogOpen({
+            id: "ExcelIImportDialogXiaoLi",
+            title: '小立报名导入',
+            url: '/PublicInfoManage/ResourceFile/UploadifyActivityForm?method=XiaoLiUpload',
+            width: "600px",
+            height: "450px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].dialogClose();
+            }, btn: ['确定', '关闭']
+        });
+    }
     //多个活动导入
     function btn_import() {
         dialogOpen({
             id: "ExcelIImportDialog",
             title: '多个活动导入',
-            url: '/PublicInfoManage/ResourceFile/UploadifyActivityForm',
+            url: '/PublicInfoManage/ResourceFile/UploadifyActivityForm?method=ActivitiesUpload',
             width: "600px",
             height: "450px",
             callBack: function (iframeId) {
-                top.frames[iframeId].AcceptClick();
+                top.frames[iframeId].dialogClose();
             }, btn: ['确定', '关闭']
         });
     }
@@ -200,7 +213,8 @@
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
             <a id="lr-print" class="btn btn-default" onclick="btn_print()"><i class="fa fa-print"></i>打印</a>
             <a id="lr-export" class="btn btn-default" onclick="btn_export()"><i class="fa fa-sign-out"></i>导出</a>
-            <a id="lr-import" class="btn btn-default" onclick="btn_import()"><i class="fa fa-sign-out"></i>多活动导入</a>
+            <a id="lr-import-xiaoli" class="btn btn-default" onclick="btn_import_xiaoli()"><i class="fa fa-arrow-down"></i>小立报名导入</a>
+            <a id="lr-import" class="btn btn-default" onclick="btn_import()"><i class="fa fa-arrow-down"></i>多活动导入</a>
         </div>
         <script>$('.toolbar').authorizeButton()</script>
     </div>
