--- a/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity_Detail/T_Activity_DetailIndex.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity_Detail/T_Activity_DetailIndex.cshtml
@@ -25,15 +25,17 @@
         var queryJson = $(".title-search").GetWebControls();
         var $gridTable = $('#gridTable');
         $gridTable.jqGrid({
-            autowidth: true,
+            autowidth: false,
             height: $(window).height() - 136.5,
             url: "../../DoveManage/T_Activity_Detail/GetPageListJson",
             postData: { queryJson: JSON.stringify(queryJson) },
             datatype: "json",
             colModel: [
-                { label: '活动详情ID', name: 'activitydetailid', index: 'activitydetailid', width: 270, align: 'left', sortable: true },
-                { label: '活动ID', name: 'activityid', index: 'activityid', width: 270, align: 'left', sortable: true },
-                { label: '用户ID', name: 'userid', index: 'userid', width: 270, align: 'left', sortable: true },
+                { label: '活动详情ID', name: 'activitydetailid', index: 'activitydetailid', width: 0, align: 'left', sortable: true, hidden: true },
+                { label: '活动ID', name: 'activityid', index: 'activityid', width: 270, align: 'left', sortable: true, hidden: true },
+                { label: '用户ID', name: 'userid', index: 'userid', width: 270, align: 'left', sortable: true, hidden: true },
+                { label: '活动编号', name: 'activitycode', index: 'activitycode', width: 100, align: 'left', sortable: true, hidden: true },
+                { label: '参与者', name: 'realname', index: 'realname', width: 100, align: 'left', sortable: true, hidden: true },
                 { label: '报名时间', name: 'time', index: 'time', width: 150, align: 'left', sortable: true },
                 { label: '备注', name: 'description', index: 'description', width: 200, align: 'left', sortable: true },
                 { label: '队别', name: 'teamname', index: 'teamname', width: 60, align: 'left', sortable: true },
@@ -43,7 +45,7 @@
             rowNum: 100,
             rowList: [100, 200, 500],
             pager: "#gridPager",
-            sortname: 'time,sortcode',
+            sortname: '',
             sortorder: 'asc',
             rownumbers: true,
             shrinkToFit: false,
@@ -150,7 +152,7 @@
     <div class="toolbar">
         <div class="btn-group">
             <a id="lr-replace" class="btn btn-default" onclick="reload()"><i class="fa fa-refresh"></i>&nbsp;刷新</a>
-            <a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>
+            @*<a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>*@
             <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;编辑</a>
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
             <a id="lr-print" class="btn btn-default" onclick="btn_print()"><i class="fa fa-print"></i>打印</a>
