--- a/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
@@ -33,8 +33,9 @@
             colModel: [
                 { label: '活动ID', name: 'activityid', index: 'activityid', width: 80, align: 'left', sortable: true, hidden: true },
                 { label: '活动编号', name: 'activitycode', index: 'activitycode', width: 80, align: 'left', sortable: true },
-                { label: '活动名称', name: 'activityname', index: 'activityname', width: 200, align: 'left', sortable: true },
-                { label: '活动地点', name: 'address', index: 'address', width: 100, align: 'left', sortable: true },
+                { label: '活动名称', name: 'activityname', index: 'activityname', width: 150, align: 'left', sortable: true },
+                { label: '活动地点code', name: 'address', index: 'address', width: 1, align: 'left', sortable: true, hidden: true },
+                { label: '活动地点', name: 'addressname', index: 'addressname', width: 100, align: 'left', sortable: true },
                 { label: '活动内容', name: 'content', index: 'content', width: 200, align: 'left', sortable: true },
                 { label: '活动开始时间', name: 'activitystarttime', index: 'activitystarttime', width: 150, align: 'left', sortable: true },
                 { label: '活动结束时间', name: 'activityendtime', index: 'activityendtime', width: 150, align: 'left', sortable: true },
@@ -70,14 +71,17 @@
                     datatype: "json",
                     height: "100%",
                     colModel: [
+                        { label: '序号', name: 'sortcode', index: 'sortcode', width: 60, align: 'left', sortable: true },
                         { label: '编号', name: 'account', index: 'account', width: 60, align: 'left', sortable: true },
                         { label: '姓名', name: 'realname', index: 'realname', width: 100, align: 'left', sortable: true },
                         { label: '昵称', name: 'nickname', index: 'nickname', width: 100, align: 'left', sortable: true },
+                        { label: '微信', name: 'wechat', index: 'wechat', width: 100, align: 'left', sortable: true },
                         { label: '备注', name: 'description', index: 'description', width: 200, align: 'left', sortable: true },
                         { label: '报名时间', name: 'time', index: 'time', width: 150, align: 'left', sortable: true }
                     ],
                     caption: "活动参与详情",
-                    rownumbers: true,
+                    rownumbers: false,
+                    rowNum: 100,
                     shrinkToFit: false,
                     gridview: true,
                     hidegrid: false,
