--- a/DOVE.Application/DOVE.Application.Web/Areas/ReportManage/Views/Report/ReportPreview.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/ReportManage/Views/Report/ReportPreview.cshtml
@@ -25,7 +25,7 @@
 
 <div id="formAreas" style="padding: 30px; margin: 25px;border-radius:5px; border: 1px solid rgb(204, 204, 204); box-shadow: rgb(189, 189, 189) 0px 0px 10px; background: #fff;">
     <div id="echart" style="width: 100%; height: 400px;"></div>
-    <div style="margin-left: 10px; margin-right: 20px;">
+    <div>
         <div class="ui-report">
             <table id="gridTable"></table>
             <div id="gridPager"></div>
